deploy: mattborghi/root-githubio-page@9e2124092bdac5b8921322cf0bd79231046acb28

--- a/css/layout.css
+++ b/css/layout.css
@@ -32,12 +32,11 @@ body {
 
 header {
   position: relative;
-  height: 800px;
-  min-height: 500px;
+  height: 100vh;
   width: 100%;
   background: #161415 url(../images/sky.jpg) no-repeat top center;
-  background-size: cover !important;
-  -webkit-background-size: cover !important;
+  background-size: cover;
+  -webkit-background-size: cover;
   text-align: center;
   overflow: hidden;
 }
